Clean script.js code. Fix bug causing calculator to widen when display numbers overflow

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 .calculator {
     border: 2px solid black;
     border-radius: 20px;
-    max-width: 300px;
+    width: 300px;
     height: 420px;
     display: grid;
     grid-gap: 20px;
@@ -37,6 +37,7 @@ body {
 }
 
 .display {
+    max-width: 256px;
     border-radius: 10px;
     background-color: deepskyblue;
     max-height: 80px;
